# cr2-decode

./: .gitignore  CMakeLists.txt  README.md
include/: CR2Decoder.h  CR2File.h
src/: CR2Decoder.cpp  CR2ExifData.h  CR2File.cpp  CR2FileImpl.h  CR2Header.h  CR2IDFEntry.h  CR2IDFFrame.h  CR2ImageData.h  CR2MakerNote.h  Constants.h  main.cpp
src/huffman/: huffman.h
